# Raven

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SimpleCam.h  Start_Raven.sh  cmake_install.cmake  cmd_app.cpp  collect_data.cpp  collect_data_v2.cpp  compile_commands.json  convert_cam1to2.cpp  convert_to_csv.cpp  facedetector.cpp  facedetector.h  input_cam1_short.csv  input_cam2.csv  input_cam2_short.csv  inputs.csv  label_cam1_short.csv  label_cam2.csv  label_cam2_short.csv  labels.csv  main.cpp  main_video.cpp  manual_training.cpp  mapped_framebuffer.cpp  move_to  move_to_percentage_via_input.cpp  opencvtest.cpp  reinforce_train_your_raven.cpp  servos.cpp  servos.h  set_back_servos  set_back_servos.cpp  sound_test  sound_test.cpp  train_your_raven.cpp  utils.hpp
data/: input_cam2.csv  inputs.csv  inputs_man.csv  label_cam2.csv  labels.csv  labels_man.csv
data_storage/: inputs_0.txt  inputs_1.txt  inputs_2.txt  inputs_test.txt  labels_0.txt  labels_1.txt  labels_2.txt  labels_test.txt
models/: model_0_02.xml  model_0_035.xml  model_0_09.xml  model_0_10.xml  model_0_11.xml  model_52.xml  model_cam2_.xml  model_cam2_0_in6_4_3_2_reinforce.xml  model_cam2_0_short.xml  model_cam2_0_short_0.xml  model_cam2_0_short_1.xml  model_cam2_6_4_2.xml  model_cam2_6_4_2_it10000.xml  model_cam2_6_4_2_it10000_976samp.xml  model_cam2_in6_reinforce_test.xml
old_data/: Camera.cpp  Camera.h  FFN.cpp  FFN.hpp  FFN_headers.h  Layer.cpp  Layer.hpp  filewriting_test  filewriting_test.cpp  gpio_test  gpio_test.cpp  input_Data.csv  input_Data_test.csv  inputs.txt  label_Data.csv  label_Data_test.csv  labels.txt  libcamera_app.cpp  test.txt  transform_input.cpp  weights.txt  weights_50000_iterations.txt
old_models/: model.xml  model_0_03.xml  model_14percentoff.xml  model_4percentoff.xml  model_save.xml
